@@ -109,20 +109,26 @@ abstract class Smarty_CacheResource_Custom extends Smarty_CacheResource {
      * Read the cached template and process the header
      *
      * @param Smarty_Internal_Template $_template template object
+     * @param Smarty_Template_Cached $cached cached object
      * @return booelan true or false if the cached content does not exist
      */
-    public function process(Smarty_Internal_Template $_template)
+    public function process(Smarty_Internal_Template $_template, Smarty_Template_Cached $cached=null)
     {
-        $content = '';
-        $timestamp = null;
-        $this->fetch(
-            $_template->cached->filepath,
-            $_template->source->name,
-            $_template->cache_id,
-            $_template->compile_id,
-            $content,
-            $timestamp
-        );
+        if (!$cached) {
+            $cached = $_template->cached;
+        }
+        $content = $cached->content ? $cached->content : null;
+        $timestamp = $cached->timestamp ? $cached->timestamp : null;
+        if ($content === null || !$timestamp) {
+            $this->fetch(
+                $_template->cached->filepath,
+                $_template->source->name,
+                $_template->cache_id,
+                $_template->compile_id,
+                $content,
+                $timestamp
+            );
+        }
         if (isset($content)) {
             $_smarty_tpl = $_template;
             eval("?>" . $content);
