@@ -71,11 +71,14 @@ class Smarty_Internal_CacheResource_File extends Smarty_CacheResource {
      * Read the cached template and process its header
      *
      * @param Smarty_Internal_Template $_template template object
+     * @param Smarty_Template_Cached $cached cached object
+     * @return booelan true or false if the cached content does not exist
      */
-    public function process(Smarty_Internal_Template $_template)
+    public function process(Smarty_Internal_Template $_template, Smarty_Template_Cached $cached=null)
     {
         $_smarty_tpl = $_template;
         include $_template->cached->filepath;
+        return true;
     }
 
     /**
